@@ -39,10 +39,10 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <log4j-version>2.24.3</log4j-version>
-    <spring-version>5.3.39</spring-version>
+    <spring-version>6.1.11</spring-version>
     <gt-version>31.6</gt-version>
     <pdfbox-version>2.0.33</pdfbox-version>
-    <metrics-version>4.2.30</metrics-version>
+    <metrics-version>4.2.26</metrics-version>
     <jackson2.version>2.18.2</jackson2.version>
   </properties>
   
@@ -116,9 +116,14 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>6.1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.annotation</groupId>
+        <artifactId>jakarta.annotation-api</artifactId>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>javax.media</groupId>
@@ -192,7 +197,7 @@
       </dependency>
       <dependency>
         <groupId>io.dropwizard.metrics</groupId>
-        <artifactId>metrics-servlet</artifactId>
+        <artifactId>metrics-jakarta-servlet</artifactId>
         <version>${metrics-version}</version>
       </dependency>
       <dependency>
@@ -202,7 +207,7 @@
       </dependency>
       <dependency>
         <groupId>io.dropwizard.metrics</groupId>
-        <artifactId>metrics-servlets</artifactId>
+        <artifactId>metrics-jakarta-servlets</artifactId>
         <version>${metrics-version}</version>
       </dependency>
       <dependency>
@@ -245,9 +250,20 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.twelvemonkeys.servlet</groupId>
+      <artifactId>servlet</artifactId>
+      <classifier>jakarta</classifier>
+      <version>3.12.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -339,7 +355,7 @@
     </dependency>
     <dependency>
       <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-servlet</artifactId>
+      <artifactId>metrics-jakarta-servlet</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -349,7 +365,7 @@
     </dependency>
     <dependency>
       <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-servlets</artifactId>
+      <artifactId>metrics-jakarta-servlets</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -379,12 +395,21 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>11</source>  <!-- The -source argument for the Java compiler. -->
-          <target>11</target>  <!-- The -target argument for the Java compiler. -->
+          <source>17</source>  <!-- The -source argument for the Java compiler. -->
+          <target>17</target>  <!-- The -target argument for the Java compiler. -->
           <debug>true</debug>   <!-- Whether to include debugging information.   -->
           <encoding>UTF-8</encoding> <!-- The -encoding argument for the Java compiler. -->
           <fork>${fork.javac}</fork> 
           <maxmem>${javac.maxHeapSize}</maxmem>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
